--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.3.1.RELEASE</spring.version>
+        <slf4j.version>1.7.21</slf4j.version>
     </properties>
 
     <dependencies>
+
         <!--spring-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -111,5 +113,22 @@
             <artifactId>jersey-json</artifactId>
             <version>1.19.1</version>
         </dependency>
+        <!--slf4j-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
