--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>jersey-json</artifactId>
             <version>1.19.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
         <!--slf4j-->
         <dependency>
             <groupId>org.slf4j</groupId>
